# FR_django

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
src/clients/: admin.py  models.py  router.py  serializers.py  services.py  views.py
src/core/: asgi.py  celery.py  models.py  serializers.py  settings.py  urls.py  wsgi.py
src/core/migrations/: 0001_initial.py
src/mailings/: admin.py  models.py  router.py  serializers.py  services.py  tasks.py  views.py
src/msgs/: admin.py  models.py  serializers.py
